[tool.poetry]
name = "test-ntpro-server"
version = "0.0.1"
description = "A test server for NTPro"
authors = ["NTPro <info@ntprog.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "0.61.2"
uvicorn = {extras = ["standard"], version = "0.14.0"}
bidict = "0.22.0"

[tool.isort]
profile = "hug"
verbose = true
no_lines_before = ["LOCALFOLDER"]
multi_line_output = 2
include_trailing_comma = false
line_length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
